# MML-FSAR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/experiments/hmdb51/: hmdb51_1shot.yaml  hmdb51_5shot.yaml
configs/experiments/kinetics/: kinetics_1shot.yaml  kinetics_5shot.yaml
configs/experiments/ssv2-full/: ssv2-full_1shot.yaml  ssv2-full_5shot.yaml
configs/experiments/ssv2-small/: ssv2-small_1shot.yaml  ssv2-small_5shot.yaml
configs/experiments/ucf101/: ucf101_1shot.yaml  ucf101_5shot.yaml
scripts/: evaluate.py  train.py
splits/hmdb51/: length_list.json  test_list.json  train_list.json  valid_list.json
splits/kinetics/: length_list.json  test_list.json  train_list.json  valid_list.json
splits/ssv2-full/: length_list.json  test_list.json  train_list.json  valid_list.json
splits/ssv2-small/: length_list.json  test_list.json  train_list.json  valid_list.json
splits/ucf101/: length_list.json  test_list.json  train_list.json  valid_list.json
src/mml_fsar/: __init__.py
src/mml_fsar/data/: __init__.py  episodic_dataset.py  metadata.py  task_dict.py  transforms.py
src/mml_fsar/engine/: evaluator.py  trainer.py
src/mml_fsar/models/: __init__.py  clip_vit.py  mml_fsar.py
src/mml_fsar/utils/: checkpoint.py  config.py  logging.py  metrics.py  seed.py
tools/: generate_episodes.py
