[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mml-fsar"
version = "0.1.0"
description = "MML-FSAR research code for few-shot action recognition."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "einops>=0.6.0",
  "ftfy>=6.1.1",
  "numpy>=1.24.0",
  "opencv-python>=4.7.0",
  "Pillow>=9.5.0",
  "PyYAML>=6.0",
  "regex>=2023.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mml_fsar.models" = ["assets/*.gz"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
